ingress-tls-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hello-world-ingress
  namespace: hello-world
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.devopsbyvikrant.com
    secretName: hello-world-tls
  rules:
  - host: www.devopsbyvikrant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc
            port:
              number: 80
